# ASTreeAnalyzer

./: .gitignore  README.md  add.c  config.json  parse.py  pyproject.toml  subtrees.csv
astree_analyzer/analysis/: kmeans.py  statistics.py
astree_analyzer/extraction/: exceptions.py  extract.py
astree_analyzer/git_parse/: bugfix.py  comments.py  git_parse.py  prepareContextFiles.py
astree_analyzer/git_parse/context_files/comments/: 0dcad32ae239906217065b6a2b0fca41962e5d57_read-cache.c_157_comment.c  0dcad32ae239906217065b6a2b0fca41962e5d57_read-cache.c_197_comment.c  0dcad32ae239906217065b6a2b0fca41962e5d57_read-cache.c_371_comment.c  32d197f18d0be74a4d82e8c42513d83423091a22_update-cache.c_41_comment.c  32d197f18d0be74a4d82e8c42513d83423091a22_update-cache.c_49_comment.c  59c1e249808c6ba38194733fa00efddb9e0eb488_fsck-cache.c_46_comment.c  59c1e249808c6ba38194733fa00efddb9e0eb488_fsck-cache.c_51_comment.c  59c1e249808c6ba38194733fa00efddb9e0eb488_fsck-cache.c_59_comment.c  59c1e249808c6ba38194733fa00efddb9e0eb488_read-cache.c_151_comment.c  59c1e249808c6ba38194733fa00efddb9e0eb488_read-cache.c_191_comment.c  59c1e249808c6ba38194733fa00efddb9e0eb488_read-cache.c_264_comment.c  76e7f4ec485f24b167b76db046dc2ca4562debd4_read-cache.c_155_comment.c  76e7f4ec485f24b167b76db046dc2ca4562debd4_read-cache.c_195_comment.c  (+13 more)
astree_analyzer/parser/: parse.py  parseSubgraphs.py  projectAnalyzer.py
astree_analyzer/tests/: testSerialization.py
astree_analyzer/tools/: cli.py
test/: cache.h  dir.h  git-compat-util.h  refs.h  sample.c  tag.h  tesr.c  test1.c
(+35 files in other folders)
